# gh-update-checker

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: quality_security.yml
cli/: gh-update-checker.cpp  main.cpp_v00.01.00  main.cpp_v00.02.00
cmake/: gh_update_checkerConfig.cmake.in
docs/: cyclonedx-1.0.0.json  spdx-1.0.0.spdx
include/: check_gh-update.hpp  check_gh-update.hpp_v00.01.00
tests/: test_basic.cpp
